Fix userpanel rounding & serverlist shadow overlay
- Fixed the user panel being rounded when not in vc
- Fixed a shadow that appeared when the server list scroller was too short, causing it to appear as if it was beneath the user panel.

--- a/src/main/_taskbar.scss
+++ b/src/main/_taskbar.scss
@@ -165,7 +165,7 @@
         z-index: 2;
     }
 
-    &:has([class*="activityPanel"], [class*="container"]) {
+    &:has([class*="activityPanel"], [class*="connection"]) {
         border-radius: 8px 8px 0 0;
     }
 
